--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.3.0",
     "method-override": "~2.3.6",
+    "momentjs": "^2.0.0",
     "mongoose": "^4.8.7",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
